--- a/index.html
+++ b/index.html
@@ -1,131 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Khali App Store</title>
-<style>
-body { font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:#f2f6fc; margin:0; padding:0;}
-header {background:linear-gradient(135deg,#00c6ff,#0072ff); color:white; padding:25px 0; text-align:center; box-shadow:0 4px 8px rgba(0,0,0,0.2);}
-header h1{margin:0;font-size:2.2em;letter-spacing:1px;}
-.search-bar {margin:25px auto;text-align:center;}
-.search-bar input {padding:12px 15px;width:80%;max-width:400px;border-radius:25px;border:1px solid #ccc;font-size:1em;transition:0.3s;}
-.search-bar input:focus {outline:none;border-color:#0072ff;box-shadow:0 0 10px rgba(0,114,255,0.3);}
-.category-tabs {text-align:center;margin-bottom:20px;}
-.category-tabs button {margin:0 5px;padding:8px 15px;border:none;border-radius:20px;background:#0072ff;color:white;cursor:pointer;transition:0.3s;}
-.category-tabs button:hover, .category-tabs button.active {background:#00c6ff;}
-.apps-container {display:flex; flex-wrap:wrap; justify-content:center; gap:25px; padding:20px;}
-.app-card {background:white; border-radius:15px; box-shadow:0 6px 15px rgba(0,0,0,0.1); width:220px; text-align:center; padding:20px 15px; transition:0.2s;}
-.app-card:hover {transform:translateY(-5px); box-shadow:0 12px 25px rgba(0,0,0,0.15);}
-.app-card img {width:100px;height:100px; border-radius:25px; margin-bottom:10px;}
-.app-card h3{margin:10px 0 5px;color:#333;}
-.app-card .category{font-size:0.85em;color:#0072ff;font-weight:bold;margin-bottom:5px;}
-.app-card .rating{margin:5px 0 15px;color:#ffb400;}
-.app-card p{font-size:0.95em;color:#666;margin-bottom:15px;}
-.app-card button{padding:10px 20px;border:none;border-radius:25px;background:linear-gradient(135deg,#00c6ff,#0072ff);color:white;cursor:pointer;font-weight:bold;transition:0.3s;}
-.app-card button:hover{background:linear-gradient(135deg,#0072ff,#00c6ff);}
-.pagination {text-align:center;margin:20px;}
-.pagination button {margin:0 3px;padding:5px 12px;border:none;border-radius:5px;background:#0072ff;color:white;cursor:pointer;}
-.pagination button.active {background:#00c6ff;}
-footer {text-align:center;padding:20px;background:#e0e6ed;color:#555;margin-top:30px;}
-</style>
+  <meta charset="UTF-8">
+  <title>Khali App Store</title>
+  <style>
+    body { font-family: Arial, sans-serif; background: #f4f6f8; margin: 0; padding: 0; }
+    header { background: #0066cc; color: white; padding: 15px; text-align: center; }
+    .store { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; padding: 20px; }
+    .card { background: white; border-radius: 10px; padding: 15px; box-shadow: 0 2px 5px rgba(0,0,0,0.2); text-align: center; }
+    .card img { max-width: 100px; height: 100px; margin-bottom: 10px; }
+    .card h3 { margin: 10px 0; font-size: 18px; }
+    .card p { font-size: 14px; color: #555; }
+    .card a { display: inline-block; margin-top: 10px; padding: 8px 12px; background: #28a745; color: white; text-decoration: none; border-radius: 5px; }
+    footer { text-align: center; padding: 15px; background: #0066cc; color: white; }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>Khali App Store</h1>
+  </header>
 
-<header>
-  <h1>Khali App Store</h1>
-</header>
+  <section class="store" id="store"></section>
 
-<div class="search-bar">
-  <input type="text" id="search" placeholder="Search apps...">
-</div>
+  <footer>Khali App Store © 2025</footer>
 
-<div class="category-tabs" id="categoryTabs">
-  <button data-category="">All</button>
-  <button data-category="Utility">Utility</button>
-  <button data-category="Weather">Weather</button>
-  <button data-category="Entertainment">Entertainment</button>
-  <button data-category="Productivity">Productivity</button>
-</div>
-
-<div class="apps-container" id="appsContainer"></div>
-
-<div class="pagination" id="pagination"></div>
-
-<footer>Khali App Store 2025</footer>
-
-<script>
-const container = document.getElementById('appsContainer');
-const searchInput = document.getElementById('search');
-const categoryTabs = document.getElementById('categoryTabs');
-const paginationDiv = document.getElementById('pagination');
-
-let currentCategory = '';
-let currentPage = 1;
-let totalPages = 1;
-
-async function fetchApps() {
-    const query = searchInput.value;
-    const response = await fetch(`/api/apps?search=${encodeURIComponent(query)}&category=${encodeURIComponent(currentCategory)}&page=${currentPage}`);
-    const data = await response.json();
-    totalPages = data.total_pages;
-    displayApps(data.apps);
-    setupPagination();
-}
-
-function displayApps(apps) {
-    container.innerHTML = '';
-    apps.forEach(app => {
-        const card = document.createElement('div');
-        card.className = 'app-card';
-        card.innerHTML = `
-            <img src="${app.icon}" alt="${app.name}">
+  <script>
+    async function loadApps() {
+      const res = await fetch('/api/apps');
+      const apps = await res.json();
+      const container = document.getElementById('store');
+      container.innerHTML = '';
+      apps.forEach(app => {
+        container.innerHTML += `
+          <div class="card">
+            <img src="${app.image}" alt="icon">
             <h3>${app.name}</h3>
-            <div class="category">${app.category}</div>
-            <div class="rating">${'★'.repeat(app.rating)}${'☆'.repeat(5 - app.rating)}</div>
             <p>${app.description}</p>
-            <button onclick="installApp(${app.id})">Install</button>
+            <a href="${app.file}" download>Download</a>
+          </div>
         `;
-        container.appendChild(card);
-    });
-}
-
-async function installApp(appId) {
-    // Real backend call without simulation
-    const response = await fetch(`/api/install/${appId}`, { method: 'POST' });
-    const result = await response.json();
-    alert(result.message);
-}
-
-// Search
-searchInput.addEventListener('input', () => { currentPage = 1; fetchApps(); });
-
-// Category filter
-categoryTabs.querySelectorAll('button').forEach(btn => {
-    btn.addEventListener('click', () => {
-        categoryTabs.querySelectorAll('button').forEach(b => b.classList.remove('active'));
-        btn.classList.add('active');
-        currentCategory = btn.getAttribute('data-category');
-        currentPage = 1;
-        fetchApps();
-    });
-});
-
-// Pagination
-function setupPagination() {
-    paginationDiv.innerHTML = '';
-    for (let i = 1; i <= totalPages; i++) {
-        const btn = document.createElement('button');
-        btn.textContent = i;
-        if (i === currentPage) btn.classList.add('active');
-        btn.addEventListener('click', () => { currentPage = i; fetchApps(); });
-        paginationDiv.appendChild(btn);
+      });
     }
-}
-
-// Initial load
-fetchApps();
-</script>
-
+    loadApps();
+  </script>
 </body>
 </html>
