--- a/index.html
+++ b/index.html
@@ -1,47 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Khali App Store</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #f4f6f8; margin: 0; padding: 0; }
-    header { background: #0066cc; color: white; padding: 15px; text-align: center; }
-    .store { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; padding: 20px; }
-    .card { background: white; border-radius: 10px; padding: 15px; box-shadow: 0 2px 5px rgba(0,0,0,0.2); text-align: center; }
-    .card img { max-width: 100px; height: 100px; margin-bottom: 10px; }
-    .card h3 { margin: 10px 0; font-size: 18px; }
-    .card p { font-size: 14px; color: #555; }
-    .card a { display: inline-block; margin-top: 10px; padding: 8px 12px; background: #28a745; color: white; text-decoration: none; border-radius: 5px; }
-    footer { text-align: center; padding: 15px; background: #0066cc; color: white; }
-  </style>
+<meta charset="UTF-8">
+<title>Khali App Store</title>
+<style>
+body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0; }
+header { background:#2196F3; color:white; padding:20px; text-align:center; }
+h1 { margin:0; font-size:2em; }
+.store { display:flex; flex-wrap:wrap; justify-content:center; padding:20px; }
+.card { background:white; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.2); margin:10px; width:200px; padding:15px; text-align:center; }
+.card img { width:100%; height:150px; object-fit:cover; border-radius:5px; }
+.card h2 { font-size:1.2em; margin:10px 0 5px; }
+.card p { font-size:0.9em; color:#555; }
+.card a { display:inline-block; margin-top:10px; padding:5px 10px; background:#2196F3; color:white; border-radius:5px; text-decoration:none; }
+.card a:hover { background:#1976D2; }
+footer { text-align:center; padding:15px; background:#eee; margin-top:20px; }
+</style>
 </head>
 <body>
-  <header>
-    <h1>Khali App Store</h1>
-  </header>
-
-  <section class="store" id="store"></section>
-
-  <footer>Khali App Store © 2025</footer>
-
-  <script>
-    async function loadApps() {
-      const res = await fetch('/api/apps');
-      const apps = await res.json();
-      const container = document.getElementById('store');
-      container.innerHTML = '';
-      apps.forEach(app => {
-        container.innerHTML += `
-          <div class="card">
-            <img src="${app.image}" alt="icon">
-            <h3>${app.name}</h3>
-            <p>${app.description}</p>
-            <a href="${app.file}" download>Download</a>
-          </div>
-        `;
-      });
-    }
-    loadApps();
-  </script>
+<header>
+<h1>Khali App Store</h1>
+</header>
+<div class="store">
+{% for app in apps %}
+<div class="card">
+<img src="{{ app.image }}" alt="{{ app.name }}">
+<h2>{{ app.name }}</h2>
+<p>{{ app.description }}</p>
+<a href="{{ app.file }}">Download</a>
+</div>
+{% endfor %}
+</div>
+<footer>
+Khali App Store 2025
+</footer>
 </body>
 </html>
