--- a/index.html
+++ b/index.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Khali App Store</title>
-  <style>
-    body { font-family: Arial, sans-serif; background:#f4f6fa; padding:20px; }
-    h1 { text-align:center; color:#333; }
-    .store { display:grid; grid-template-columns:repeat(auto-fill,minmax(220px,1fr)); gap:16px; margin-top:20px; }
-    .app { background:#fff; padding:16px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.1); }
-    .app h2 { margin:0; font-size:20px; color:#1976d2; }
-    .app p { margin:8px 0; font-size:14px; color:#555; }
-    .download { display:inline-block; padding:6px 12px; background:#2196f3; color:#fff; text-decoration:none; border-radius:4px; }
-    .download:hover { background:#1976d2; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Khali App Store</title>
+<style>
+body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0; }
+header { background:#2196F3; color:white; padding:20px; text-align:center; }
+h1 { margin:0; font-size:2em; }
+.store { display:flex; flex-wrap:wrap; justify-content:center; padding:20px; }
+.card { background:white; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.2); margin:10px; width:220px; padding:15px; text-align:center; }
+.card img { width:100%; height:150px; object-fit:cover; border-radius:5px; }
+.card h2 { font-size:1.2em; margin:10px 0 5px; }
+.card p { font-size:0.9em; color:#555; }
+.card a { display:inline-block; margin-top:10px; padding:7px 12px; background:#2196F3; color:white; border-radius:5px; text-decoration:none; }
+.card a:hover { background:#1976D2; }
+footer { text-align:center; padding:15px; background:#eee; margin-top:20px; }
+@media(max-width:600px){.card{width:90%; margin:10px auto;}}
+</style>
 </head>
 <body>
-  <h1>📱 Khali App Store</h1>
-  <div class="store" id="store"></div>
 
-  <script>
-    const API_URL = "https://YOUR-BACKEND-URL.onrender.com"; // change after deployment
+<header><h1>Khali App Store</h1></header>
 
-    async function loadApps() {
-      const res = await fetch(API_URL + "/apps");
-      const apps = await res.json();
-      const store = document.getElementById("store");
-      store.innerHTML = "";
+<div class="store"></div>
 
+<footer>Khali App Store 2025</footer>
+
+<script>
+// Use your backend URL here
+const API_URL = "https://your-backend.onrender.com/api/apps";
+
+fetch(API_URL)
+  .then(res => res.json())
+  .then(apps => {
+      const store = document.querySelector(".store");
+      const backendRoot = API_URL.replace('/api/apps','');
       apps.forEach(app => {
-        const div = document.createElement("div");
-        div.className = "app";
-        div.innerHTML = `
-          <h2>${app.name}</h2>
-          <p>${app.desc}</p>
-          <a class="download" href="${API_URL}/download/${app.id}" target="_blank">⬇️ Download</a>
-        `;
-        store.appendChild(div);
+          const card = document.createElement("div");
+          card.className = "card";
+          card.innerHTML = `
+            <img src="${backendRoot}${app.image}" alt="${app.name}">
+            <h2>${app.name}</h2>
+            <p>${app.description}</p>
+            <a href="${backendRoot}${app.file}" target="_blank">Download</a>
+          `;
+          store.appendChild(card);
       });
-    }
+  })
+  .catch(err => console.error("Error fetching apps:", err));
+</script>
 
-    loadApps();
-  </script>
 </body>
 </html>
