--- a/index.html
+++ b/index.html
@@ -28,22 +28,21 @@ footer { text-align:center; padding:15px; background:#eee; margin-top:20px; }
 <footer>Khali App Store 2025</footer>
 
 <script>
-// Use your backend URL here
-const API_URL = "https://your-backend.onrender.com/api/apps";
+// Set backend URL
+const BACKEND_URL = "https://your-backend.onrender.com"; // change to your backend
 
-fetch(API_URL)
+fetch(BACKEND_URL + "/api/apps")
   .then(res => res.json())
   .then(apps => {
       const store = document.querySelector(".store");
-      const backendRoot = API_URL.replace('/api/apps','');
       apps.forEach(app => {
           const card = document.createElement("div");
           card.className = "card";
           card.innerHTML = `
-            <img src="${backendRoot}${app.image}" alt="${app.name}">
+            <img src="${BACKEND_URL}${app.image}" alt="${app.name}">
             <h2>${app.name}</h2>
             <p>${app.description}</p>
-            <a href="${backendRoot}${app.file}" target="_blank">Download</a>
+            <a href="${BACKEND_URL}${app.file}" target="_blank">Download</a>
           `;
           store.appendChild(card);
       });
