--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ footer { text-align:center; padding:15px; background:#eee; margin-top:20px; }
 <footer>Khali App Store 2025</footer>
 
 <script>
-// Set backend URL
-const BACKEND_URL = "https://your-backend.onrender.com"; // change to your backend
+// <-- Set your Render backend URL here -->
+const BACKEND_URL = "https://store-backend-12-unuj.onrender.com";
 
 fetch(BACKEND_URL + "/api/apps")
   .then(res => res.json())
